Create runtime_files directory for some benchmarks
Summary:
This creates `runtime_files` subdirectory for benchmarks that need
some files at runtime. This make it clear what files are actually
needed to run the benchmarks and makes it much easier to support
building/running them out of separate build directory.

This affects the following benchmarks:
- real/anna
- real/cacheprof
- real/fluid
- real/hidden
- real/maillist
- real/prolog
- real/scs
- spectral/expert
- spectral/mate
- spectral/para
- spectral/treejoin

Signed-off-by: Michal Terepeta <michal.terepeta@gmail.com>

Test Plan: build & run

Reviewers: bgamari

Reviewed By: bgamari

Subscribers: snowleopard

Differential Revision: https://phabricator.haskell.org/D3411

--- a/.gitignore
+++ b/.gitignore
@@ -41,7 +41,7 @@ real/hidden/hidden
 real/hpg/hpg
 real/infer/infer
 real/lift/lift
-real/maillist/addresses.tex
+real/maillist/runtime_files/addresses.tex
 real/maillist/maillist
 real/mkhprog/mkhprog
 real/parser/parser
