--- a/real/hidden/Makefile
+++ b/real/hidden/Makefile
@@ -2,7 +2,7 @@ TOP = ../..
 include $(TOP)/mk/boilerplate.mk
 
 SRC_RUNTEST_OPTS += +RTS -K1m -RTS
-PROG_ARGS = objects/four.plate
+PROG_ARGS = runtime_files/four.plate
 
 include $(TOP)/mk/target.mk
 
