--- a/spectral/para/Makefile
+++ b/spectral/para/Makefile
@@ -1,7 +1,7 @@
 TOP = ../..
 include $(TOP)/mk/boilerplate.mk
 
-PROG_ARGS = input-data
+PROG_ARGS = runtime_files/input-data
 
 include $(TOP)/mk/target.mk
 
