--- a/spectral/treejoin/Makefile
+++ b/spectral/treejoin/Makefile
@@ -3,7 +3,7 @@ include $(TOP)/mk/boilerplate.mk
 
 # Arguments to test program
 SRC_RUNTEST_OPTS += +RTS -K3m -H24m -RTS
-PROG_ARGS = 27000.1 27000.2
+PROG_ARGS = runtime_files/27000.1 runtime_files/27000.2
 
 include $(TOP)/mk/target.mk
 
