Simplify some shootout Makefiles
Summary:
By following the naming conventions of the build system we can
simplify the `Makefile`s a bit.  This patch also avoids having to
explicitly pass the flags to `runstdtest` for `fasta`, `k-nucleotide`
and `reverse-complement`.  The only consquence of this is that it's a
requirement to run `make boot` before `make` for these benchmarks. But
that is already the case since `.depend` files are generated by with
`make boot`.

Finally, this also update the `.gitignore` with the new names of
the output/input files.

Signed-off-by: Michal Terepeta <michal.terepeta@gmail.com>

Test Plan: build & run

Reviewers: bgamari

Reviewed By: bgamari

Differential Revision: https://phabricator.haskell.org/D3412

--- a/.gitignore
+++ b/.gitignore
@@ -62,16 +62,16 @@ shootout/fasta/fasta.slowstdout
 shootout/fasta/fasta.stdout
 shootout/k-nucleotide/fasta-c
 shootout/k-nucleotide/k-nucleotide
-shootout/k-nucleotide/knucleotide-input250000.txt
-shootout/k-nucleotide/knucleotide-input2500000.txt
-shootout/k-nucleotide/knucleotide-input25000000.txt
+shootout/k-nucleotide/k-nucleotide.faststdin
+shootout/k-nucleotide/k-nucleotide.slowstdin
+shootout/k-nucleotide/k-nucleotide.stdin
 shootout/n-body/n-body
 shootout/pidigits/pidigits
 shootout/reverse-complement/fasta-c
 shootout/reverse-complement/revcomp-c
-shootout/reverse-complement/revcomp-input250000.txt
-shootout/reverse-complement/revcomp-input2500000.txt
-shootout/reverse-complement/revcomp-input25000000.txt
+shootout/reverse-complement/reverse-complement.faststdin
+shootout/reverse-complement/reverse-complement.slowstdin
+shootout/reverse-complement/reverse-complement.stdin
 shootout/reverse-complement/reverse-complement
 shootout/reverse-complement/reverse-complement.faststdout
 shootout/reverse-complement/reverse-complement.slowstdout
