Fix CRLF handling in NoFib
See https://phabricator.haskell.org/D3030#98590.

The current master uses the diff alias for comparison, which pollutes
stdout. I fixed the tr -d '\r' calls that previously were in place, but
broken due to escaping. I also did the same for golden master generation
in shootout Makefiles.

Test Plan:

```
make clean && \
make NoFibRuns=1 2>&1 > nofib.log && \
nofib-analyse/nofib-analyse nofib.log
```

Differential Revision: https://phabricator.haskell.org/D3450

--- a/shootout/reverse-complement/Makefile
+++ b/shootout/reverse-complement/Makefile
@@ -51,13 +51,13 @@ revcomp-c : revcomp-c.o
 	gcc $< -o $@ -pthread
 
 reverse-complement.faststdout : revcomp-c $(INPUT_FILE)
-	./revcomp-c < $(INPUT_FILE) > $@
+	./revcomp-c < $(INPUT_FILE) | tr -d '\r' > $@
 
 reverse-complement.stdout : revcomp-c $(INPUT_FILE)
-	./revcomp-c < $(INPUT_FILE) > $@
+	./revcomp-c < $(INPUT_FILE) | tr -d '\r' > $@
 
 reverse-complement.slowstdout : revcomp-c $(INPUT_FILE)
-	./revcomp-c < $(INPUT_FILE) > $@
+	./revcomp-c < $(INPUT_FILE) | tr -d '\r' > $@
 
 # Since we only decide here what the OUTPUT_FILE is, it's required to first run
 # `make boot` and only than `make` (otherwise `make` doesn't "see" the file and
