--- a/real/eff/S/Makefile
+++ b/real/eff/S/Makefile
@@ -1,7 +1,7 @@
 TOP = ../../..
 include $(TOP)/mk/boilerplate.mk
 
-SRC_HC_OPTS += -fglasgow-exts -package transformers -package mtl -O2
+SRC_HC_OPTS += -fglasgow-exts -package transformers -package mtl
 
 include $(TOP)/mk/target.mk
 
