--- a/shootout/reverse-complement/Makefile
+++ b/shootout/reverse-complement/Makefile
@@ -13,7 +13,7 @@ SLOW_OPTS = 25000000  # official shootout setting
 
 # The benchmark game also uses -fllvm, which we can't since it might
 # not be available on the developer's machine.
-HC_OPTS += -O2 -XBangPatterns -funfolding-use-threshold=32 -XMagicHash \
+HC_OPTS += -XBangPatterns -funfolding-use-threshold=32 -XMagicHash \
 	-XUnboxedTuples
 
 #------------------------------------------------------------------
