Clean more generated files
Summary:
When we don't remove the generated files, `make boot` won't regenerate
them. That in turn leads to expected output failures after bumping
`{FAST,NORM,SLOW}_OPTS`.

Test Plan: make clean && make boot && make

Reviewers: AndreasK, mpickering, osa1, alpmestan, O26 nofib

Reviewed By: alpmestan

Differential Revision: https://phabricator.haskell.org/D5365

--- a/real/compress/Makefile
+++ b/real/compress/Makefile
@@ -5,6 +5,8 @@ SRC_RUNTEST_OPTS += -stdout-binary
 
 SRCS = BinConv.hs BinTest.hs Decode.hs Defaults.hs Encode.hs Main.hs PTTrees.hs Uncompress.hs
 
+CLEAN_FILES += compress.stdin compress.stdout
+
 Lzw_HC_OPTS = -cpp
 
 include $(TOP)/mk/target.mk
@@ -16,7 +18,3 @@ compress.stdin : compress.faststdin
 
 compress.stdout : compress.stdin compress
 	./compress < compress.stdin > compress.stdout
-
-
-clean ::
-	rm -f compress.stdin compress.stdout
