--- a/shootout/binary-trees/Makefile
+++ b/shootout/binary-trees/Makefile
@@ -8,5 +8,5 @@ SLOW_OPTS = 20  # official shootout setting
 
 # The benchmark game also uses -fllvm, which we can't since it might
 # not be available on the developer's machine.
-HC_OPTS += -XBangPatterns -funbox-strict-fields
+HC_OPTS += -funbox-strict-fields
 SRC_RUNTEST_OPTS += +RTS -K128M -H200m -RTS
