--- a/shootout/k-nucleotide/Makefile
+++ b/shootout/k-nucleotide/Makefile
@@ -11,7 +11,7 @@ CLEAN_FILES += fasta-c k-nucleotide.*stdin
 
 # The benchmark game also uses -fllvm, which we can't since it might
 # not be available on the developer's machine.
-HC_OPTS += -XBangPatterns -package bytestring
+HC_OPTS += -package bytestring
 
 #------------------------------------------------------------------
 # Create input
