Make `git clean -nxd` silent after `make distclean`
Also check that invariant in CI: After a `make distclean`
`git clean -nxd` should find no files.

The hope is that this catches cases were a `make clean` would forget to
list a `.gitignore`d file that should either be registered as a
`(DIST_)CLEAN_FILE` or should be unignored and committed into the
repository.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,3 +11,9 @@ validate:
     - make boot mode=fast
     - "make mode=fast NoFibRuns=1 2>&1 | tee log"
     - "nofib-analyse/nofib-analyse log"
+    - # The following checks that `make distclean` removes any files reported
+    - # by `git clean -fxd`
+    - make distclean
+    - files=$(git clean -nxd | cut -d' ' -f3)
+    - echo $files
+    - [ -z $files ] || exit 1
