--- a/nofib-analyse/Makefile
+++ b/nofib-analyse/Makefile
@@ -10,8 +10,17 @@ all :: $(PROG)
 
 boot :: $(PROG)
 
-clean:
-	rm -f $(PROG)
+# This clean hierarchy mirrors mk/ghc-target.mk.
+# See mk/ghc-paths.mk for the semantics.
+
+.PHONY: mostlyclean clean distclean maintainer-clean
+
+mostlyclean::
 	rm -f CmdLine.hi GenUtils.hi Main.hi Slurp.hi
 	rm -f CmdLine.o  GenUtils.o  Main.o  Slurp.o
 
+clean:: mostlyclean
+	rm -f $(PROG)
+
+distclean:: clean
+maintainer-clean:: distclean
