--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,3 +11,13 @@ validate:
     - make boot mode=fast
     - "make mode=fast NoFibRuns=1 2>&1 | tee log"
     - "nofib-analyse/nofib-analyse log"
+    - |
+      # The following checks that `make distclean` removes any files reported
+      # by `git clean -fxd`
+      make distclean
+      files=$(git clean -nxd | cut -d" " -f3 | sed "/log/d")
+      if ! [ -z $files ]
+      then
+        echo "The following files weren't cleaned:\n$files"
+        exit 1
+      fi
