--- a/real/Makefile
+++ b/real/Makefile
@@ -1,7 +1,7 @@
 TOP = ..
 include $(TOP)/mk/boilerplate.mk
 
-SUBDIRS = anna bspt compress compress2 fem fluid fulsom gamteb gg \
+SUBDIRS = anna bspt cacheprof compress compress2 fem fluid fulsom gamteb gg \
           grep hidden hpg infer lift linear maillist mkhprog parser pic prolog \
           reptile rsa scs symalg veritas eff
 
