--- a/imaginary/gen_regexps/Makefile
+++ b/imaginary/gen_regexps/Makefile
@@ -2,6 +2,6 @@ TOP = ../..
 include $(TOP)/mk/boilerplate.mk
 include $(TOP)/mk/target.mk
 
-FAST_OPTS = [a-j][a-j][a-j][0-9][p-z]
-NORM_OPTS = [a-j][a-j][a-j][a-j][a-j][1-2]abcdefghijklmnopqrstuvwxy
-SLOW_OPTS = [a-j][a-j][a-j][a-j][a-j][1-5]abcdefghijklmnopqrstuvwxy
+FAST_OPTS = [a-j][a-j][a-j][0-9]
+NORM_OPTS = [a-l][a-l][a-l][a-l][1-1]abcdefghijklmnopqrstuvwxy
+SLOW_OPTS = [a-l][a-l][a-l][a-l][1-5]abcdefghijklmnopqrstuvwxy
