--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,8 @@
+variables:
+  DOCKER_REV: 6d19c3adc1f5c28c82aed8c5b1ac40931ac60f3f
+
 validate:
-  image: ghcci/x86_64-linux-deb9:0.2
+  image: "registry.gitlab.haskell.org/ghc/ci-images/x86_64-linux-deb9:$DOCKER_REV"
   before_script:
     - git clean -xdf
     - sudo apt install -y time
